🐈‍⬛ Installation notes update